// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    className="ds-u-left-border-warning"
    closeButtonVariation="transparent"
    closeIcon={<CloseIcon />}
    escapeExitDisabled={false}
    escapeExits={true}
    heading={
      <div>
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  9888,
                  "exclamation-triangle",
                  "warning",
                ],
                "f071",
                "M506.3 417l-213.3-364c-16.33-28-57.54-28-73.98 0l-213.2 364C-10.59 444.9 9.849 480 42.74 480h426.6C502.1 480 522.6 445 506.3 417zM232 168c0-13.25 10.75-24 24-24S280 154.8 280 168v128c0 13.25-10.75 24-23.1 24S232 309.3 232 296V168zM256 416c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 401.9 273.4 416 256 416z",
              ],
              "iconName": "triangle-exclamation",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Unable to save changes!
      </div>
    }
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at
       
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    className="ds-u-left-border-warning"
    closeButtonVariation="transparent"
    closeIcon={<CloseIcon />}
    escapeExitDisabled={false}
    escapeExits={true}
    heading={
      <div>
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  9888,
                  "exclamation-triangle",
                  "warning",
                ],
                "f071",
                "M506.3 417l-213.3-364c-16.33-28-57.54-28-73.98 0l-213.2 364C-10.59 444.9 9.849 480 42.74 480h426.6C502.1 480 522.6 445 506.3 417zM232 168c0-13.25 10.75-24 24-24S280 154.8 280 168v128c0 13.25-10.75 24-23.1 24S232 309.3 232 296V168zM256 416c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 401.9 273.4 416 256 416z",
              ],
              "iconName": "triangle-exclamation",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Unable to save changes!
      </div>
    }
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at
       
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-live="polite"
/>
`;
